<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/root_layout_padding"
    tools:context="com.kurobarabenjamingeorge.jobschedulerexample.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_label"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/networkOptions"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_network"
            android:id="@+id/none"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any_network"
            android:id="@+id/any"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi"
            android:id="@+id/wifi"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_conditions_label"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_charging_label"
        android:id="@+id/deviceChargingSwitch"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startJobBtn"
        android:text="@string/start_job_btn"
        android:layout_gravity="center_horizontal"
        android:onClick="scheduleJob"
        android:contentDescription="@string/starts_a_job"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelJobBtn"
        android:text="@string/cancel_job_btn"
        android:layout_gravity="center_horizontal"
        android:onClick="cancelJob"
        android:contentDescription="@string/cancels_a_job"/>

</LinearLayout>
